src/css/styles.css
.vswiper-container {
  margin-left: auto;
  margin-right: auto;
  position: relative;
  overflow: hidden;
  list-style: none;
  padding: 0;
  z-index: 1;
}

.vswiper__track {
  position: relative;
  z-index: 0;
  overflow: hidden;
  height: 100%;
}

.vswiper__list {
  position: relative;
  width: 100%;
  height: 100%;
  z-index: 1;
  display: flex;
  transition-property: transform;
  box-sizing: content-box;
}

.vswiper__list {
  transform: translate3d(0px, 0, 0);
}

.vswiper-slide {
  flex-shrink: 0;
  width: 100%;
  height: 100%;
  position: relative;
  transition-property: transform;
}

.splide__pagination {
  position: absolute;
  text-align: center;
  transition: 0.3s opacity;
  transform: translate3d(0, 0, 0);
  z-index: 10;
  overflow: hidden;
  font-size: 0;
  left: 50%;
  transform: translateX(-50%);
  white-space: nowrap;
  bottom: 10px;
}

.splide__pagination-track {
  position: relative;
  bottom: unset;
  align-items: center;
  padding: 0;
  margin: 0 -5px;
  white-space: nowrap;
  height: 100%;
  transform: translateX(0);
  transition: all 0.25s;
}

.splide__pagination__page {
  width: 8px;
  height: 8px;
  display: inline-block;
  border-radius: 100%;
  background: #000;
  padding: 0;
  opacity: 0.2;
  transform: scale(0.33);
  position: relative;
  margin: 0 4px;
  transition: 0.2s transform, 0.2s left;
}

.splide__pagination__page.active-prev,
.splide__pagination__page.active-next {
  transform: scale(0.66);
}

.splide__pagination__page.is-active {
  transform: scale(1);
}

